Work on User endpoints in API doc
